--- a/bike/pages/register/register.wxml
+++ b/bike/pages/register/register.wxml
@@ -35,7 +35,8 @@
                     <input class="weui-input" placeholder="请输入号码" bindinput='inputPhone'/>
                 </view>
                  <view class="weui-cell__ft">
-                    <view class="weui-vcode-btn" disabled='{{disabled}}' bindtap='genVerifycode'>获取验证码</view>
+
+                    <button class='yanzheng_btn' bindtap="genVerifycode" disabled='{{disabled}}' >{{codename}}</button>
                 </view>
             </view>
             
@@ -49,7 +50,9 @@
                 </view>
               
             </view>
- <button class="submit" type='primary' bindtap='submit'>提交</button>
+
+            
+      <button class="submit" type='primary' bindtap='submit'>提交</button>
          <checkbox-group bindchange="bindAgreeChange">
             <label class="weui-agree" for="weuiAgree">
                 <view class="weui-agree__text">
@@ -61,4 +64,5 @@
                 </view>
             </label>
            </checkbox-group>
-                    
+              
+       
