--- a/bike/pages/register/register.wxml
+++ b/bike/pages/register/register.wxml
@@ -1,30 +1,27 @@
 <!--pages/register/register.wxml-->
 
-<view class="page">
-    <view class="page__bd">
-        <view class="weui-tab">
-            <view class="weui-navbar">
-                <block wx:for="{{tabs}}" wx:key="*this">
-                    <view id="{{index}}" class="weui-navbar__item {{activeIndex == index ? 'weui-bar__item_on' : ''}}" bindtap="tabClick">
-                        <view class="weui-navbar__title">{{item}}</view>
-                    </view>
-                </block>
-                <view class="weui-navbar__slider" style="left: {{sliderLeft}}px; transform: translateX({{sliderOffset}}px); -webkit-transform: translateX({{sliderOffset}}px);"></view>
-            </view>
-            <view class="weui-tab__panel">
-
-                  <view class="weui-tab__content" hidden="{{activeIndex != 0}}">
-
-                </view>
-
-            </view>
-        </view>
+<view class="cont">
+  <view class="tou" >
+    <view bindtap="gotogeren">
+      绑定手机
+      <view class="san">
+        <text class="jiao"></text>
+      </view>
     </view>
+    <view>-></view>
+    <view bindtap="gotodianpu">支付押金
+     </view>
+    <view>-></view>
+    <view bindtap="gotoshenhe">实名认证
+
+    </view>
+  </view>
 </view>
 
+
                   <!--这是用来注册 -->
-    
-        <view class="weui-cells weui-cells_after-title">
+<view class='regist'>
+        <view class="weui-cells">
             <view class="weui-cell weui-cell_select">
                 <view class="weui-cell__hd" style="width: 105px">
                     <picker bindchange="bindCountryCodeChange" value="{{countryCodeIndex}}" range="{{countryCodes}}">
@@ -46,7 +43,7 @@
                     <view class="weui-label">验证码</view>
                 </view>
                 <view class="weui-cell__bd">
-                    <input class="weui-input" placeholder="请输入验证码" />
+                    <input class="weui-input" placeholder="请输入验证码" bindinput='inputcode'/>
                 </view>
               
             </view>
@@ -60,9 +57,9 @@
                     <view class="weui-agree__checkbox-icon">
                         <icon class="weui-agree__checkbox-icon-check" type="success_no_circle" size="9" wx:if="{{isAgree}}"></icon>
                     </view>
-                    阅读并同意<navigator url="https://corp.163.com/gb/legal.html" class="weui-agree__link">《相关条款》</navigator>
+                    阅读并同意<navigator url="https://corp.163.com/gb/legal.html" class="agree__link">《相关条款》</navigator>
                 </view>
             </label>
-           </checkbox-group>
+       </checkbox-group>
               
-       
+  </view>
